Fixed patient search bar appearance (corrected alignment, size etc.).

--- a/src/main/webapp/css/topnav.css
+++ b/src/main/webapp/css/topnav.css
@@ -15,8 +15,8 @@ html, body {
 
 .topnav-grid {
 	display: grid;
-    grid-template-columns: auto auto auto auto auto auto; 
-    grid-auto-flow: column; /*Makes items flow across columns into a single row*/ 
+    grid-template-columns: auto auto auto; 
+    grid-auto-flow: column;  
 	width: 100%;
 	height: 100%;
 }
@@ -81,34 +81,41 @@ html, body {
 }
 
 /* Search bar */
-form.search intput[type=text] {
+.search-container {
+	margin: auto;
+	width: 100%;
+	text-align: center;
+}
+
+form.search-container input[type=text] {
 	padding: 10px;
 	font-size: 17px;
 	border: 1px solid grey;
-	float: left;
-	width: 80%;
+	width: 75%;
 	background: #f1f1f1;
 }
 
-form.search button {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: #2196F3;
-  color: white;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none; /* Prevent double borders */
-  cursor: pointer;
+form.search-container button {
+
+	display: inline-block;	
+	/*float: left;*/
+	width: 10%;
+	padding: 10px;
+	background: #2196F3;
+	color: white;
+	font-size: 17px;
+	border: 1px solid grey;
+	border-left: none; /* Prevent double borders */
+	cursor: pointer;
 }
 
 form.search button:hover {
-  background: #0b7dda;
+ 	background: #0b7dda;
 }
 
 /* Clear floats */
 form.search::after {
-  content: "";
-  clear: both;
-  display: table;
+	content: "";
+	clear: both;
+	display: table;
 }
